Add and link expo-mds etc

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,3 +19,12 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
 }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+
+        flatDir { dirs "$rootDir/../node_modules/expo-mds/android" }
+    }
+}
