--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,10 @@ android {
         versionName "1.0"
     }
 
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+    }
+
     splits {
         abi {
             reset()
